@startuml

skinparam roundcorner 8
skinparam linetype ortho
skinparam shadowing false

skinparam class {
    BackgroundColor White
    ArrowColor #73726c
    BorderColor #534AB7
}

entity "CUSTOMER" as customer {
    * id : String <<PK>>
    --
    name : String
    email : String
    phone : String
    address : String
    createdAt : LocalDateTime
    updatedAt : LocalDateTime
}

entity "CATEGORY" as category {
    * id : String <<PK>>
    --
    name : String
    description : String
    createdAt : LocalDateTime
}

entity "PRODUCT" as product {
    * id : String <<PK>>
    --
    name : String
    description : String
    price : BigDecimal
    stock : Integer
    sku : String
    categoryId : String <<FK>>
    createdAt : LocalDateTime
    updatedAt : LocalDateTime
}

entity "ORDER" as order {
    * id : String <<PK>>
    --
    orderNumber : String
    customerId : String <<FK>>
    orderDate : LocalDateTime
    orderStatus : Enum<CREATED, PROCESSING, COMPLETED, CANCELLED>
    paymentStatus : Enum<PENDING, PAID, FAILED, EXPIRED>
    paymentId : String
    totalAmount : BigDecimal
    paymentMethod : Enum<CASH, QRIS, TRANSFER, OTHER>
    paidAt : LocalDateTime
    notes : String
    idempotencyKey : String
    createdAt : LocalDateTime
}

entity "ORDER_DETAILS" as order_details {
    * id : String <<PK>>
    --
    orderId : String <<FK>>
    productId : String <<FK>>
    quantity : Integer
    unitPrice : BigDecimal
    subtotal : BigDecimal
}

entity "PAYMENT" as payment {
    * id : String <<PK>>
    --
    paymentNumber : String
    orderId : String
    orderNumber : String
    customerId : String
    amount : BigDecimal
    paymentMethod : Enum<CASH, QRIS, TRANSFER, OTHER>
    paymentStatus : Enum<PENDING, PAID, FAILED, EXPIRED>
    referenceNumber : String
    idempotencyKey : String
    paidAt : LocalDateTime
    expiredAt : LocalDateTime
    notes : String
    createdAt : LocalDateTime
    updatedAt : LocalDateTime
}

customer ||--o{ order : "places"
category ||--o{ product : "contains"
order ||--|{ order_details : "has"
product ||--o{ order_details : "included in"
order ||--o| payment : "paid via"

@enduml